# cloudflare-dns-update

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml
src/: cli.rs  ip.rs  main.rs
