[package]
name = "cloudflare-dns-update"
version = "0.1.0"
authors = ["Ramid Khan <ramidzkh@gmail.com>"]
edition = "2021"
description = "Simple dynamic DNS updating for CloudFlare"
license = "MIT"

[dependencies]
tokio = { version = "1.18.0", features = ["macros"] }
clap = { version = "3.1.8", features = ["derive"] }
wild = "2.0.4"
argfile = "0.1.4"
cloudflare = "0.9.1"
reqwest = "0.11.10"
either = "1.6.1"

[profile.release]
strip = true
lto = true
