[package]
name = "cloudflare-dns-update"
version = "0.3.0"
authors = ["Ramid Khan <ramidzkh@gmail.com>"]
edition = "2021"
description = "Simple dynamic DNS updating for CloudFlare"
license = "MIT"

[dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
clap = { version = "4.4.4", features = ["derive"] }
argfile = "0.1.6"
reqwest = "0.11.20"
cloudflare = "0.10.1"

[profile.release]
strip = true
lto = true
